[tool.poetry]
name = "carbonarc"
version = "0.0.1"
description = "Carbon Arc - API Library"
authors = ["Carbon Arc <support@carbonarc.co>"]
readme = "README.md"
packages = [{include = "carbonarc", from = "src"}, {include = "carbonarc_cli", from = "src"}]
license = "Apache-2.0"
repository = "https://github.com/Carbon-Arc/carbonarc.git"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.5.0"
pandas = "^2.2.3"

[tool.poetry.scripts]
carbonarc = "carbonarc_cli.cli:cli"

[tool.setuptools.package-data]
carbonarc = ["carbonarc/*"]
carbonarc_cli = ["carbonarc_cli/*"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
